--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ sdl2 = { version = "0.33.0", features = ["bundled"] }
 auto_ops = "0.1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+image = "0.22.4"
