--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,8 @@
-[package]
-name = "zengine"
-version = "0.1.0"
-edition = "2018"
+[workspace]
+members = [
+    "zengine"
+]
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-gl = "0.14.0"
-sdl2 = { version = "0.33.0", features = ["bundled"] }
-auto_ops = "0.1.0"
-serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
-image = "0.22.4"
+exclude = [
+    "examples/pong"
+]
