--- a/zengine/Cargo.toml
+++ b/zengine/Cargo.toml
@@ -8,3 +8,4 @@ gl = "0.14.0"
 sdl2 = { version = "0.33.0", features = ["bundled", "static-link"] }
 auto_ops = "0.1.0"
 image = "0.22.4"
+downcast-rs= "1.1.1"
